src/objects/Property_information__c.object
<CustomObject>
    <fields>
        <fullName>Additional_information__c</fullName>
        <label>Additional information?</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Amount_of_monthly_rent_received__c</fullName>
        <label>Amount of monthly rent received?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_of_monthly_repayment__c</fullName>
        <label>Amount of monthly repayment?</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_outstanding_on_property__c</fullName>
        <label>Amount outstanding on property?</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_purchased__c</fullName>
        <label>Date purchased</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_value__c</fullName>
        <label>Estimated value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExisitingMortgageHPPLender__c</fullName>
        <label>ExisitingMortgageHPPLender</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_outstanding_on_prop_on_drawdown__c</fullName>
        <description>Will there be any finance outstanding on this property at the point of drawdown on finance for this application?</description>
        <inlineHelpText>Will there be any finance outstanding on this property at the point of drawdown on finance for this application?</inlineHelpText>
        <label>Finance outstanding on prop on drawdown?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_line_of_address__c</fullName>
        <label>First line of address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsBTLProperty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsBTLProperty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Let_property_out__c</fullName>
        <formula>if(  IsBTLProperty__c  , &apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Let property out</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BTL Property Infor(Opportunity)</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Properties information</relationshipLabel>
        <relationshipName>Properties_information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PersonAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Properties information</relationshipLabel>
        <relationshipName>Properties_information</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Property information</label>
    <nameField>
        <displayFormat>PI{0000}</displayFormat>
        <label>Property information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Properties information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>